--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "IncogMedium",
-    "version": "1",
+    "version": "1.1",
     "manifest_version": 2,
     "background": {
         "scripts": [
@@ -8,7 +8,13 @@
         ]
     },
     "browser_action": {
-        "default_popup": "popup.html"
+        "default_popup": "popup.html",
+        "default_icon": {
+            "16": "favicon/s5.png",
+            "32": "favicon/s4.png",
+            "48": "favicon/s3.png",
+            "128": "favicon/s2.png"
+        }
     },
     "permissions": [
         "activeTab",
