--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
     "name": "IncogMedium",
+    "description": "Incog Medium is a simple chrome extension which enables you to read articles on Medium endlessly without subscription.",
     "version": "1.1",
     "manifest_version": 2,
     "background": {
